@@ -100,6 +100,7 @@ Please note that our support for the checkout block is still experimental and th
 
 = 3.7.0 - 2022-xx-xx =
 * Fix - Currency name not translated the Overview card title.
+* Add - Introduce advance filters on disputes page.
 
 = 3.6.0 - 2022-01-20 =
 * Update - Bump minimum required version of WooCommerce from 4.4 to 4.5.
